# COLDAEpp

./: .gitattributes  .gitignore  CMakeLists.txt  ColDAEpp.cpp  ColDAEpp.h  ColDAEpp.hpp  LICENSE  Makefile  README.md  f90test.f90  todo.txt
.github/workflows/: cmake.yml  test.yml
analytic/: checker.nb
doc/: .gitignore  documentation.aux  documentation.tex
fortran dbg/: Makefile
original/: .gitignore  Makefile  bench1.f90  coldae.f  colnew.f  colsys.f  guesstable.txt  result.txt  result2.txt  result3.txt  result4.txt  test.f  test1.f  test2.f  test3.f  test4.f90
original/tests/: test.f  test2.f
src/: CMakeLists.txt  ColDAEpp.cpp  ColDAEpp.hpp  ColDAEpp.hpp.bak  Makefile  old.hpp  test.cpp  test.hpp  test1.cpp  timer.h
src/fem/: data_type_star.hpp  error_utils.hpp
test/: benchmark.cpp  checker.nb  systems.hpp  test.cpp  tests.cpp  timer.h  torus-problem.nb
